--- a/config/config_master.yaml
+++ b/config/config_master.yaml
@@ -1,226 +1,233 @@
-# Master configuration file for regional flexibility optimization
-# Comprehensive parameter set for the French regional energy model
+# Configuration exhaustive pour RegionalFlexOptimizer
+# inclut : costs, storage_params, demand_response, tech_params, constraints, curtailment, etc.
 
-# ========================================
-# General Configuration
-# ========================================
-
-# List of regions to analyze
+# ———————————————————————————————————————————————
+# Région et technologies
+# ———————————————————————————————————————————————
 regions:
-  - "Auvergne_Rhone_Alpes"
-  - "Nouvelle_Aquitaine" 
-  - "Occitanie"
-  - "Provence_Alpes_Cote_d'Azur"
+  - Auvergne_Rhone_Alpes
+  - Nouvelle_Aquitaine
+  - Occitanie
+  - Provence_Alpes_Cote_d'Azur
 
-# Region name mapping (standardized names to match data sources)
 region_name_map:
-  "Auvergne-Rhone-Alpes": "Auvergne Rhone Alpes"
-  "Nouvelle-Aquitaine": "Nouvelle Aquitaine"
-  "Occitanie": "Occitanie"
-  "Provence-Alpes-Cote-dAzur": "Provence Alpes Cote d'Azur"
+  "Auvergne-Rhone-Alpes": "Auvergne_Rhone_Alpes"
+  "Nouvelle-Aquitaine":   "Nouvelle_Aquitaine"
+  "Occitanie":             "Occitanie"
+  "Provence-Alpes-Cote-dAzur": "Provence_Alpes_Cote_d'Azur"
 
-# Time settings for optimization
-time_settings:
-  resolution: "30min"  # Half-hourly resolution
-  start_date: "2022-01-01 00:00:00"
-  end_date: "2022-12-31 23:30:00"
-
-# Technology name mapping to align with optimizer's expected names
 tech_name_map:
-  hydraulique: "hydro"
-  nucleaire: "nuclear"
-  thermique_gaz: "thermal_gas" 
+  hydraulique:    "hydro"
+  nucleaire:      "nuclear"
+  thermique_gaz:  "thermal_gas"
   thermique_charbon: "thermal_coal"
-  bioenergie: "biofuel"
+  bioenergie:     "biofuel"
 
-# ========================================
-# Cost Parameters
-# ========================================
-
-# Cost parameters: optimized for balanced flexibility utilization
+# ———————————————————————————————————————————————
+# Coûts (objective)
+# ———————————————————————————————————————————————
 costs:
-  # System costs - more balanced to encourage diverse flexibility solutions
-  demand_response: 60.0  # EUR/MWh - Reduced to encourage more use of demand response
-  exchange: 35.0   # EUR/MWh - Regional exchange cost (increased to balance with other options)
+  hydro:                 30.0      # €/MWh
+  nuclear:               40.0
+  thermal_gas:           80.0
+  thermal_coal:          90.0
+  biofuel:               70.0
+  demand_response:      120.0
+  exchange:              25.0
+  transport_exchange:    30.0
+  storage_charge:        4.0
+  storage_discharge:     3.0
+  slack_penalty:    50000.0
+  curtailment_penalty: 10000.0
 
-  # Storage technology-specific costs (more balanced)
-  storage_STEP_charge: 35.0    # EUR/MWh - More balanced cost for charging pumped hydro storage
-  storage_STEP_discharge: 60.0 # EUR/MWh - More balanced cost for discharging pumped hydro storage
-  storage_batteries_charge: 40.0    # EUR/MWh - More balanced cost for charging batteries
-  storage_batteries_discharge: 70.0  # EUR/MWh - More balanced cost for discharging batteries
-  
-  # Updated general costs
-  transport_exchange: 40.0  # EUR/MWh - More balanced cost for transportation grid exchanges
-  slack_penalty: 50000.0  # EUR/MWh - High penalty to discourage slack variables
-  curtailment_penalty: 10000.0  # EUR/MWh - Penalty for curtailment
+# ———————————————————————————————————————————————
+# Paramètres de stockage 
+# ———————————————————————————————————————————————
+storage_params:
+  STEP:
+    charge_efficiency:    0.95      # fraction
+    discharge_efficiency: 0.95
+    max_power_ratio:      1.0       # rapport charge/puissance
+  batteries:
+    charge_efficiency:    0.95
+    discharge_efficiency: 0.95
+    max_power_ratio:      1.0
 
-# ========================================
-# Global Constraints
-# ========================================
+# Valeurs initiales SOC (optionnel, sinon code met 50 %)
+storage_initial:
+  Auvergne_Rhone_Alpes:
+    STEP:      30550.0   # MWh = 50% de 61100
+    batteries: 100.0    # MWh = 50% de 200
+  Nouvelle_Aquitaine:
+    STEP:        0.0
+    batteries:  700.0   # MWh = 50% de 1400
+  Occitanie:
+    STEP:    19400.0    # MWh = 50% de 38800
+    batteries: 500.0
+  Provence_Alpes_Cote_dAzur:
+    STEP:      0.0
+    batteries: 500.0
 
-# Global constraints applied to all regions unless overridden
+# ———————————————————————————————————————————————
+# Demand response (per region)
+# ———————————————————————————————————————————————
+demand_response:
+  Auvergne_Rhone_Alpes:
+    max_shift:         0.10      # 10% de la demande instantanée
+    max_total:       1000.0     # MWh sur l’horizon
+    participation_rate: 1.0      # 100% des consommateurs
+  Nouvelle_Aquitaine:
+    max_shift:         0.10
+    max_total:        800.0
+    participation_rate: 1.0
+  Occitanie:
+    max_shift:         0.10
+    max_total:        600.0
+    participation_rate: 1.0
+  Provence_Alpes_Cote_dAzur:
+    max_shift:         0.10
+    max_total:        400.0
+    participation_rate: 1.0
+
+# ———————————————————————————————————————————————
+# Ramping (% de capacité / pas de temps)
+# ———————————————————————————————————————————————
+tech_params:
+  hydro:
+    ramp_rate:          0.30      # 30% / 30 min
+  nuclear:
+    ramp_rate:          0.05
+  thermal_gas:
+    ramp_rate:          0.50
+  thermal_coal:
+    ramp_rate:          0.30
+  biofuel:
+    ramp_rate:          0.15
+
+# ———————————————————————————————————————————————
+# Contraintes globales
+# ———————————————————————————————————————————————
 constraints:
-  # Maximum capacity constraints
-  max_demand_response: 5000.0  # MW - Maximum demand response capacity
-  max_daily_demand_response: 10000.0 # MWh/day - Maximum daily energy shifted via DR
-  max_exchange: 2000.0  # MW - Maximum exchange capacity between regions (increased from 2000.0)
-  max_storage: 5000.0  # MW - Maximum storage power capacity
-  transport_capacity: 5000.0  # MW - Maximum transport network exchange capacity (increased from 3000.0)
-  exchange_capacity: 2000.0  # MW - Maximum exchange capacity (direct connections) (increased from 2000.0)
-  max_slack: 10000.0  # MW - Maximum slack variable value for grid constraints
-  
-  # Flexibility diversity constraints - Minimum utilization thresholds
-  min_storage_utilization: 0.0  # At least 15% of demand should be met by storage activity
-  min_dr_utilization: 0.0      # At least 10% of demand should use demand response
-  min_exchange_utilization: 0.0 # At least 15% of demand should involve regional exchanges
-  
-  # Storage-related constraints
-  storage_efficiency: 0.95  # Self-discharge efficiency (per half-hour)
-  charge_efficiency: 0.95   # Efficiency when charging storage
-  discharge_efficiency: 0.95 # Efficiency when discharging storage
-  initial_storage_level: 0.5  # Initial storage level as fraction of capacity
-  
-  # Minimum dispatch levels (as percentage of installed capacity)
-  min_dispatch_nuclear: 0.20  # Nuclear plants minimum dispatch level
-  min_dispatch_hydro: 0.05    # Hydro minimum dispatch level
-  min_dispatch_thermal: 0.05  # Thermal plants minimum dispatch level 
-  min_dispatch_thermal_gas: 0.05  # Gas plants minimum dispatch level
-  min_dispatch_thermal_coal: 0.05  # Coal plants minimum dispatch level
-  min_dispatch_biofuel: 0.05  # Biofuel plants minimum dispatch level
-  
-  # Ramping constraints (maximum change in MW per time period)
-  max_ramp_rate_hydro: 0.30   # Hydro can ramp by 30% of capacity per period
-  max_ramp_rate_nuclear: 0.05 # Nuclear can ramp by 5% per period
-  max_ramp_rate_thermal: 0.50 # Thermal can ramp by 50% per period
-  max_ramp_rate_thermal_gas: 0.50 # Gas can ramp by 50% per period
-  max_ramp_rate_thermal_coal: 0.30 # Coal can ramp by 30% per period 
-  max_ramp_rate_biofuel: 0.15 # Biofuel can ramp by 15% per period
+  # Capacités maximales
+  max_exchange:           20000.0  # MW
+  exchange_capacity:      20000.0  # MW unidirectionnel
+  transport_capacity:     20000.0  # MW
+  max_storage:             5000.0  # MW
+  max_slack:              10000.0  # MW
 
-  allow_curtailment: true
+  # Diversité de flexibilité (min % / demande)
+  min_storage_utilization:   0.0   # 15% ?
+  min_dr_utilization:        0.0   # 10% ?
+  min_exchange_utilization:  0.0   # 15% ?
 
-# ========================================
-# Regional Capacities from config_reg.yaml
-# ========================================
+  # Cyclical storage
+  use_cyclical_storage:      true
 
-# Installed generation capacities by region and technology
+  # Grille (stabilité)
+  grid_stability:
+    max_total_exchange_per_region: 3000.0  # MW
+
+# ———————————————————————————————————————————————
+# Capacités régionales (dispatch)
+# ———————————————————————————————————————————————
 regional_capacities:
-  "Auvergne Rhone Alpes":
-    hydro: 11403    # MW
-    nuclear: 13630  # MW
-    thermal_gas: 700   # MW (centrales gaz)
-    thermal_coal: 300   # MW (centrales charbon fioul)
-    biofuel: 190    # MW (biomasse, biogaz, déchets)
-  "Nouvelle Aquitaine":
-    hydro: 2300     # MW
-    nuclear: 6500   # MW
-    thermal_gas: 100    # MW
-    thermal_coal: 0   # MW
-    biofuel: 250    # MW
-  "Occitanie":
-    hydro: 5296     # MW
-    nuclear: 2734   # MW
-    thermal_gas: 500    # MW
-    thermal_coal: 100   # MW
-    biofuel: 171    # MW
-  "Provence Alpes Cote d'Azur":
-    hydro: 3348     # MW
-    nuclear: 0      # MW
-    thermal_gas: 2000   # MW (cycles combinés gaz)
-    thermal_coal: 760   # MW (centrales charbon fioul)
-    biofuel: 210    # MW
+  Auvergne_Rhone_Alpes:
+    hydro:        11403
+    nuclear:      13630
+    thermal_gas:    700
+    thermal_coal:    300
+    biofuel:        190
+  Nouvelle_Aquitaine:
+    hydro:         2300
+    nuclear:       6500
+    thermal_gas:    100
+    thermal_coal:      0
+    biofuel:        250
+  Occitanie:
+    hydro:         5296
+    nuclear:       2734
+    thermal_gas:    500
+    thermal_coal:    100
+    biofuel:        171
+  Provence_Alpes_Cote_dAzur:
+    hydro:         3348
+    nuclear:          0
+    thermal_gas:   2000
+    thermal_coal:    760
+    biofuel:        210
 
-# ========================================
-# Regional Storage Capacities
-# ========================================
-
-# Region-specific storage data (from final_config.yaml)
+# ———————————————————————————————————————————————
+# Capacités régionales de stockage
+# ———————————————————————————————————————————————
 regional_storage:
-  "Auvergne Rhone Alpes":
-    batteries_puissance_MW: 100.0   # Battery power capacity
-    batteries_stockage_MWh: 200.0   # Battery energy capacity
-    STEP_puissance_MW: 3610.0        # Pumped hydro power capacity (updated from config_reg)
-    STEP_stockage_MWh: 61100.0       # Pumped hydro energy capacity (updated from config_reg)
-  
-  "Nouvelle Aquitaine":
+  Auvergne_Rhone_Alpes:
+    batteries_puissance_MW: 100.0
+    batteries_stockage_MWh: 200.0
+    STEP_puissance_MW:      3610.0
+    STEP_stockage_MWh:     61100.0
+  Nouvelle_Aquitaine:
     batteries_puissance_MW: 700.0
     batteries_stockage_MWh: 1400.0
-    STEP_puissance_MW: 0.0         # No major STEP (from config_reg)
-    STEP_stockage_MWh: 0.0         # No major STEP (from config_reg)
-  
-  "Occitanie":
+    STEP_puissance_MW:       0.0
+    STEP_stockage_MWh:       0.0
+  Occitanie:
     batteries_puissance_MW: 500.0
     batteries_stockage_MWh: 1000.0
-    STEP_puissance_MW: 920.0       # From config_reg
-    STEP_stockage_MWh: 38800.0     # From config_reg
-  
-  "Provence Alpes Cote d'Azur":
+    STEP_puissance_MW:      920.0
+    STEP_stockage_MWh:     38800.0
+  Provence_Alpes_Cote_dAzur:
     batteries_puissance_MW: 500.0
     batteries_stockage_MWh: 1000.0
-    STEP_puissance_MW: 0.0         # No major STEP (from config_reg)
-    STEP_stockage_MWh: 0.0         # No major STEP (from config_reg)
+    STEP_puissance_MW:       0.0
+    STEP_stockage_MWh:       0.0
 
-# ========================================
-# Regional Cost Multipliers
-# ========================================
-
-# Regional constraints and cost multipliers
-regional_constraints:
-  "Auvergne Rhone Alpes":
-    transport_cost_multiplier: 1.0
-    exchange_cost_multiplier: 1.0
-    dr_cost_multiplier: 1.0
-  
-  "Nouvelle Aquitaine":
-    transport_cost_multiplier: 1.0
-    exchange_cost_multiplier: 1.0
-    dr_cost_multiplier: 1.0
-    
-  "Occitanie":
-    transport_cost_multiplier: 1.0
-    exchange_cost_multiplier: 1.0
-    dr_cost_multiplier: 1.0
-    
-  "Provence Alpes Cote d'Azur":
-    transport_cost_multiplier: 1.0
-    exchange_cost_multiplier: 1.0
-    dr_cost_multiplier: 1.0
-    slack_penalty_multiplier: 1.0  # Higher slack penalty for this region
-
-# ========================================
-# Regional Production Costs from config_reg.yaml
-# ========================================
-
-# Regional costs per generation technology
+# ———————————————————————————————————————————————
+# Coûts et multiplicateurs régionaux
+# ———————————————————————————————————————————————
 regional_costs:
-  "Auvergne Rhone Alpes":
-    hydro: 20.0         # €/MWh
-    nuclear: 30.0       # €/MWh
-    thermal_gas: 75.0   # €/MWh
-    thermal_coal: 85.0  # €/MWh
-    biofuel: 70.0      # €/MWh
-  "Nouvelle Aquitaine":
-    hydro: 20.0         # €/MWh
-    nuclear: 30.0       # €/MWh
-    thermal_gas: 75.0   # €/MWh
-    thermal_coal: 85.0  # €/MWh
-    biofuel: 70.0      # €/MWh
-  "Occitanie":
-    hydro: 25.0         # €/MWh
-    nuclear: 30.0       # €/MWh
-    thermal_gas: 75.0   # €/MWh
-    thermal_coal: 85.0  # €/MWh
-    biofuel: 70.0      # €/MWh
-  "Provence Alpes Cote d'Azur":
-    hydro: 20.0         # €/MWh
-    nuclear: 30.0       # €/MWh (reference value - no nuclear in PACA)
-    thermal_gas: 75.0   # €/MWh
-    thermal_coal: 85.0  # €/MWh
-    biofuel: 70.0      # €/MWh
+  Auvergne_Rhone_Alpes:
+    hydro:        20.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_coal: 85.0
+    biofuel:      70.0
+  Nouvelle_Aquitaine:
+    hydro:        20.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_coal: 85.0
+    biofuel:      70.0
+  Occitanie:
+    hydro:        25.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_coal: 85.0
+    biofuel:      70.0
+  Provence_Alpes_Cote_dAzur:
+    hydro:        20.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_coal: 85.0
+    biofuel:      70.0
 
-# ========================================
-# Path Configuration
-# ========================================
-
-# Data and results paths
-data_paths:
-  processed_data: "data/processed"
+regional_constraints:
+  Auvergne_Rhone_Alpes:
+    transport_cost_multiplier: 1.0
+    exchange_cost_multiplier:  1.0
+    dr_cost_multiplier:        1.0
+    slack_penalty_multiplier:  1.0
+  Nouvelle_Aquitaine:
+    transport_cost_multiplier: 1.0
+    exchange_cost_multiplier:  1.0
+    dr_cost_multiplier:        1.0
+    slack_penalty_multiplier:  1.0
+  Occitanie:
+    transport_cost_multiplier: 1.0
+    exchange_cost_multiplier:  1.0
+    dr_cost_multiplier:        1.0
+    slack_penalty_multiplier:  1.0
+  Provence_Alpes_Cote_dAzur:
+    transport_cost_multiplier: 1.0
+    exchange_cost_multiplier:  1.0
+    dr_cost_multiplier:        1.0
+    slack_penalty_multiplier:  1.0
