--- a/config/config_master.yaml
+++ b/config/config_master.yaml
@@ -46,11 +46,12 @@ storage_params:
   STEP:
     charge_efficiency:    0.90      # fraction
     discharge_efficiency: 0.85
-    max_power_ratio:      0.80       # rapport charge/puissance
+    max_power_ratio:      0.95       # rapport charge/puissance
   batteries:
     charge_efficiency:    0.90
-    discharge_efficiency: 0.85
-    max_power_ratio:      0.80
+    discharge_efficiency: 0.90
+    max_power_ratio:      0.90
+    self_discharge_per_hour: 0.192  # 19.2% per half-hour, so battery is empty after 12h
 
 # Valeurs initiales SOC (optionnel, sinon code met 50 %)
 storage_initial:
@@ -72,19 +73,19 @@ storage_initial:
 # ———————————————————————————————————————————————
 demand_response:
   Auvergne_Rhone_Alpes:
-    max_shift:         0.10      # 10% de la demande instantanée
+    max_shift:         5      # 10% de la demande instantanée
     max_total:       10000.0     # MWh sur l’horizon
     participation_rate: 1.0      # 100% des consommateurs
   Nouvelle_Aquitaine:
-    max_shift:         0.10
+    max_shift:         5
     max_total:        8000.0
     participation_rate: 1.0
   Occitanie:
-    max_shift:         0.10
+    max_shift:         5
     max_total:        6000.0
     participation_rate: 1.0
   Provence_Alpes_Cote_dAzur:
-    max_shift:         0.10
+    max_shift:         5
     max_total:        4000.0
     participation_rate: 1.0
 
@@ -126,7 +127,7 @@ regional_transport_capacities:
     Auvergne_Rhone_Alpes: 5000
     Occitanie: 1500
     Nouvelle_Aquitaine: 0  # Pas de connexion directe
-  max_storage:             5000.0  # MW
+  max_storage:             6500.0  # MW
   max_slack:              10000.0  # MW
 
   # Diversité de flexibilité (min % / demande)
