--- a/config/config_master.yaml
+++ b/config/config_master.yaml
@@ -20,24 +20,161 @@ tech_name_map:
   hydraulique:    "hydro"
   nucleaire:      "nuclear"
   thermique_gaz:  "thermal_gas"
-  thermique_charbon: "thermal_coal"
+  thermique_fioul: "thermal_fuel"
   bioenergie:     "biofuel"
 
 # ———————————————————————————————————————————————
 # Coûts (objective)
 # ———————————————————————————————————————————————
+
+# ———————————————————————————————————————————————
+# Paramètres d'engagement d'unité (UC)
+# ———————————————————————————————————————————————
+uc_params:
+  Auvergne_Rhone_Alpes:
+    hydro:
+      fixed_cost: 100.0         # €/h
+      startup_cost: 200.0       # €/start
+      min_up_time: 2            # h
+      min_down_time: 2          # h
+    nuclear:
+      fixed_cost: 200.0
+      startup_cost: 1000.0
+      min_up_time: 24
+      min_down_time: 24
+    thermal_gas:
+      fixed_cost: 150.0
+      startup_cost: 400.0
+      min_up_time: 4
+      min_down_time: 4
+    thermal_fuel:
+      fixed_cost: 180.0
+      startup_cost: 600.0
+      min_up_time: 6
+      min_down_time: 6
+    biofuel:
+      fixed_cost: 120.0
+      startup_cost: 250.0
+      min_up_time: 2
+      min_down_time: 2
+  Nouvelle_Aquitaine:
+    hydro:
+      fixed_cost: 100.0
+      startup_cost: 200.0
+      min_up_time: 2
+      min_down_time: 2
+    nuclear:
+      fixed_cost: 200.0
+      startup_cost: 1000.0
+      min_up_time: 24
+      min_down_time: 24
+    thermal_gas:
+      fixed_cost: 150.0
+      startup_cost: 400.0
+      min_up_time: 4
+      min_down_time: 4
+    thermal_fuel:
+      fixed_cost: 180.0
+      startup_cost: 600.0
+      min_up_time: 6
+      min_down_time: 6
+    biofuel:
+      fixed_cost: 120.0
+      startup_cost: 250.0
+      min_up_time: 2
+      min_down_time: 2
+  Occitanie:
+    hydro:
+      fixed_cost: 110.0
+      startup_cost: 210.0
+      min_up_time: 2
+      min_down_time: 2
+    nuclear:
+      fixed_cost: 210.0
+      startup_cost: 1100.0
+      min_up_time: 24
+      min_down_time: 24
+    thermal_gas:
+      fixed_cost: 155.0
+      startup_cost: 410.0
+      min_up_time: 4
+      min_down_time: 4
+    thermal_fuel:
+      fixed_cost: 185.0
+      startup_cost: 610.0
+      min_up_time: 6
+      min_down_time: 6
+    biofuel:
+      fixed_cost: 100.0
+      startup_cost: 200.0
+      min_up_time: 2
+      min_down_time: 2
+  Provence_Alpes_Cote_dAzur:
+    hydro:
+      fixed_cost: 105.0
+      startup_cost: 205.0
+      min_up_time: 2
+      min_down_time: 2
+    nuclear:
+      fixed_cost: 0.0
+      startup_cost: 0.0
+      min_up_time: 0
+      min_down_time: 0
+    thermal_gas:
+      fixed_cost: 152.0
+      startup_cost: 405.0
+      min_up_time: 4
+      min_down_time: 4
+    thermal_fuel:
+      fixed_cost: 182.0
+      startup_cost: 605.0
+      min_up_time: 6
+      min_down_time: 6
+    biofuel:
+      fixed_cost: 100.0
+      startup_cost: 200.0
+      min_up_time: 2
+      min_down_time: 2
+
 costs:
   hydro:                 30.0      # €/MWh
   nuclear:               40.0
+  biofuel:               50.0
   thermal_gas:           80.0
-  thermal_coal:          90.0
-  biofuel:               70.0
+  thermal_fuel:          90.0
   demand_response:      120.0
   exchange:              35.0
   storage_charge:        35.0
   storage_discharge:     50.0
   slack_penalty:    50000.0
   curtailment_penalty: 10000.0
+
+# Override region-specific costs that were being loaded
+regional_costs:
+  Auvergne_Rhone_Alpes:
+    hydro:        20.0
+    nuclear:      30.0
+    biofuel:      45.0  # Lower than thermal_gas
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+  Nouvelle_Aquitaine:
+    hydro:        20.0
+    nuclear:      30.0 
+    biofuel:      45.0  # Lower than thermal_gas
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+  Occitanie:
+    hydro:        25.0
+    nuclear:      30.0
+    biofuel:      45.0  # Lower than thermal_gas
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+  Provence_Alpes_Cote_dAzur:
+    hydro:        20.0
+    nuclear:      30.0
+    biofuel:      45.0  # Lower than thermal_gas
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
 
 # ———————————————————————————————————————————————
 # Paramètres de stockage 
@@ -99,7 +236,7 @@ tech_params:
     ramp_rate:          0.05
   thermal_gas:
     ramp_rate:          0.80
-  thermal_coal:
+  thermal_fuel:
     ramp_rate:          0.30
   biofuel:
     ramp_rate:          0.15
@@ -138,109 +275,107 @@ constraints:
     use_cyclical_storage:      false
 
 
-  # ———————————————————————————————————————————————
-  # Contraintes minimales de fonctionnement
-  # ———————————————————————————————————————————————
-  min_nuclear_capacity_fraction: 0.15
+# ———————————————————————————————————————————————
+# Contraintes minimales de fonctionnement
+# ———————————————————————————————————————————————
+min_nuclear_capacity_fraction: 0.15
 
-  # ———————————————————————————————————————————————
-  # Capacités régionales (dispatch)
-  # ———————————————————————————————————————————————
-  regional_capacities:
-    Auvergne_Rhone_Alpes:
-      hydro:        11403
-      nuclear:      13630
-      thermal_gas:    700
-      thermal_coal:    300
-      biofuel:        190
-    Nouvelle_Aquitaine:
-      hydro:         2300
-      nuclear:       6500
-      thermal_gas:    100
-      thermal_coal:      0
-      biofuel:        250
-    Occitanie:
-      hydro:         5296
-      nuclear:       2734
-      thermal_gas:    500
-      thermal_coal:    100
-      biofuel:        171
-    Provence_Alpes_Cote_dAzur:
-      hydro:         3348
-      nuclear:          0
-      thermal_gas:   2000
-      thermal_coal:    760
-      biofuel:        210
+# ———————————————————————————————————————————————
+# Coûts et multiplicateurs régionaux
+# ———————————————————————————————————————————————
+regional_costs:
+  Auvergne_Rhone_Alpes:
+    hydro:        20.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+    biofuel:      70.0
+  Nouvelle_Aquitaine:
+    hydro:        20.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+    biofuel:      70.0
+  Occitanie:
+    hydro:        25.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+    biofuel:      70.0
+  Provence_Alpes_Cote_dAzur:
+    hydro:        20.0
+    nuclear:      30.0
+    thermal_gas:  75.0
+    thermal_fuel: 85.0
+    biofuel:      70.0
 
-  # ———————————————————————————————————————————————
-  # Capacités régionales de stockage
-  # ———————————————————————————————————————————————
-  regional_storage:
-    Auvergne_Rhone_Alpes:
-      batteries_puissance_MW: 100.0
-      batteries_stockage_MWh: 200.0
-      STEP_puissance_MW:      3610.0
-      STEP_stockage_MWh:     61100.0
-    Nouvelle_Aquitaine:
-      batteries_puissance_MW: 700.0
-      batteries_stockage_MWh: 1400.0
-      STEP_puissance_MW:       0.0
-      STEP_stockage_MWh:       0.0
-    Occitanie:
-      batteries_puissance_MW: 500.0
-      batteries_stockage_MWh: 1000.0
-      STEP_puissance_MW:      920.0
-      STEP_stockage_MWh:     38800.0
-    Provence_Alpes_Cote_dAzur:
-      batteries_puissance_MW: 500.0
-      batteries_stockage_MWh: 1000.0
-      STEP_puissance_MW:       0.0
-      STEP_stockage_MWh:       0.0
+# ———————————————————————————————————————————————
+# Capacités régionales (dispatch)
+# ———————————————————————————————————————————————
+regional_capacities:
+  Auvergne_Rhone_Alpes:
+    hydro:        11403
+    nuclear:      13630
+    thermal_gas:    700
+    thermal_fuel:    300
+    biofuel:        190
+  Nouvelle_Aquitaine:
+    hydro:         2300
+    nuclear:       6500
+    thermal_gas:    100
+    thermal_fuel:      0
+    biofuel:        250
+  Occitanie:
+    hydro:         5296
+    nuclear:       2734
+    thermal_gas:    500
+    thermal_fuel:    100
+    biofuel:        171
+  Provence_Alpes_Cote_dAzur:
+    hydro:         3348
+    nuclear:          0
+    thermal_gas:   2000
+    thermal_fuel:    760
+    biofuel:        210
+# ———————————————————————————————————————————————
+# Capacités régionales de stockage
+# ———————————————————————————————————————————————
+regional_storage:
+  Auvergne_Rhone_Alpes:
+    batteries_puissance_MW: 100.0
+    batteries_stockage_MWh: 200.0
+    STEP_puissance_MW:      3610.0
+    STEP_stockage_MWh:     61100.0
+  Nouvelle_Aquitaine:
+    batteries_puissance_MW: 700.0
+    batteries_stockage_MWh: 1400.0
+    STEP_puissance_MW:       0.0
+    STEP_stockage_MWh:       0.0
+  Occitanie:
+    batteries_puissance_MW: 500.0
+    batteries_stockage_MWh: 1000.0
+    STEP_puissance_MW:      920.0
+    STEP_stockage_MWh:     38800.0
+  Provence_Alpes_Cote_dAzur:
+    batteries_puissance_MW: 500.0
+    batteries_stockage_MWh: 1000.0
+    STEP_puissance_MW:       0.0
+    STEP_stockage_MWh:       0.0
 
-  # ———————————————————————————————————————————————
-  # Coûts et multiplicateurs régionaux
-  # ———————————————————————————————————————————————
-  regional_costs:
-    Auvergne_Rhone_Alpes:
-      hydro:        20.0
-      nuclear:      30.0
-      thermal_gas:  75.0
-      thermal_coal: 85.0
-      biofuel:      70.0
-    Nouvelle_Aquitaine:
-      hydro:        20.0
-      nuclear:      30.0
-      thermal_gas:  75.0
-      thermal_coal: 85.0
-      biofuel:      70.0
-    Occitanie:
-      hydro:        25.0
-      nuclear:      30.0
-      thermal_gas:  75.0
-      thermal_coal: 85.0
-      biofuel:      70.0
-    Provence_Alpes_Cote_dAzur:
-      hydro:        20.0
-      nuclear:      30.0
-      thermal_gas:  75.0
-      thermal_coal: 85.0
-      biofuel:      70.0
+loss_factor_per_km: 0.00025        # 0.025 % de pertes par km (à ajuster)
 
-
-  loss_factor_per_km: 0.00025        # 0.025 % de pertes par km (à ajuster)
-
-  regional_distances:               # km à vol d’oiseau ou longueur de ligne
-    Auvergne_Rhone_Alpes:
-      Nouvelle_Aquitaine: 520
-      Occitanie:          240
-      Provence_Alpes_Cote_dAzur: 260
-    Nouvelle_Aquitaine:
-      Auvergne_Rhone_Alpes: 520
-      Occitanie:          310
-    Occitanie:
-      Auvergne_Rhone_Alpes: 240
-      Nouvelle_Aquitaine: 310
-      Provence_Alpes_Cote_dAzur: 190
-    Provence_Alpes_Cote_dAzur:
-      Auvergne_Rhone_Alpes: 260
-      Occitanie:          190
+regional_distances:               # km à vol d’oiseau ou longueur de ligne
+  Auvergne_Rhone_Alpes:
+    Nouvelle_Aquitaine: 520
+    Occitanie:          240
+    Provence_Alpes_Cote_dAzur: 260
+  Nouvelle_Aquitaine:
+    Auvergne_Rhone_Alpes: 520
+    Occitanie:          310
+  Occitanie:
+    Auvergne_Rhone_Alpes: 240
+    Nouvelle_Aquitaine: 310
+    Provence_Alpes_Cote_dAzur: 190
+  Provence_Alpes_Cote_dAzur:
+    Auvergne_Rhone_Alpes: 260
+    Occitanie:          190
