--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
+*.lp filter=lfs diff=lfs merge=lfs -text
